# SpriteToolSuperDelux

./: .clang-format  .gitattributes  .gitignore  105.mwl  BUILDING.md  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.html  CONTRIBUTING.md  JumpOverShell.asm  Makefile  README.html  README.md  ROM Map.txt  SMW.mw2  SMW.mwt  __shared.asm  _pixi.bat  anti_boo.cfg  appveyor.yml  blooper.cfg  build_script.ps1  build_script.sh  changelog.txt  cleanbatch.bat  copy_asan_dll.ps1  default.m16.bak  generate_json.py  list-sa1.txt  list.txt  main.asm  make.bat  make.sh  make_debug.bat  mdtohtml.py  pixi-sa1.bat  pixi.bat  readme.txt  (+9 more)
Custom Graphics/: poison.pal
Graphics for Included Sprites/: bomb_bro.json
asm/: Poison.asm  bounce.asm  broken.bps  cleanup.asm  cleanup_backup.asm  cluster.asm  extended.asm  fullcleanup.asm  main - Kopie.asm  main.asm  main_npl.asm  minorextended.asm  otherspritecode.asm  othersprites.asm  overworld.asm  pointer_caller.asm  sa1def.asm  score.asm  smoke.asm  spinningcoin.asm
cluster/: _header.asm  fish.asm  flowers.asm  rain.asm  sandstorm.asm
extended/: _header.asm  boomerang.asm  hammer.asm  routines.asm
generators/: _header.asm
minorextended/: _header.asm
new_sprites/: Blue.cfg  DivisibleBoo.asm  DivisibleBoo.cfg  Green.cfg  Koopa.asm  Readme.txt  Red.cfg
overworld/: _header.asm  bird.asm  burp.asm  crow.asm  dolphin.asm  dummy.asm  eerie.asm  fish.asm  flag.asm  goomba.asm  koopaball.asm  lantern.asm  lotus.asm  lotuspollen.asm  monty.asm  ninji.asm  piranha_plant.asm  planets.asm  podoboo.asm  puffer.asm  rex.asm  saws.asm  shyplanet.asm  smoke.asm  spotlight.asm  staticsprite.asm
routines/: .SubOffScreen - [Legacy].asm  Aiming.asm  AimingWithShift.asm  Aiming_New.asm  BounceChangeMap16.asm  BounceGenericDraw.asm  BounceGetDrawInfo.asm  BounceSetMarioSpeed.asm  BounceSetSpeed.asm  BounceUpdatePos.asm  ChangeMap16.asm  CheckForContactAlternate.asm  CircleX.asm  CircleXY.asm  CircleY.asm  Circle_New  ClusterGetDrawInfo.asm  ClusterSpeed.asm  ExtendedCapeClipping.asm  ExtendedGetDrawInfo.asm  ExtendedHurt.asm  ExtendedSpeed.asm  FireballContact.asm  GetDrawInfo - [Legacy].asm  GetDrawInfo.asm  GetMap16.asm  GetRandomRange.asm  MarioInteraction.asm  MinorExtendedGetDrawInfo.asm  OverworldDistance.asm  OverworldGetDrawInfo.asm  OverworldGetDrawInfoPriority.asm  OverworldHorzPos.asm  OverworldOffScreen.asm  OverworldSpawnSprite.asm  OverworldXSpeed.asm  OverworldYSpeed.asm  OverworldZSpeed.asm  Random.asm  ReplaceCurrent.asm  (+32 more)
shooters/: _header.asm  diag_bill.asm  diag_bill.cfg  diag_bill_down.asm  diag_bill_down.cfg  diag_bill_up.asm  diag_bill_up.cfg  diag_down_bill.asm  diag_down_bill.cfg  diag_down_bill.json  diag_up_bill.asm  diag_up_bill.cfg  diag_up_bill.json  pswitch-regen.asm  pswitch-regen.cfg  vertical_bill.asm  vertical_bill.cfg  vertical_bill.json
sprites/: DivisibleBoo.asm  Koopa.asm  Yellow.cfg  _header.asm  donut_lift.asm  donut_lift.cfg  extra_byte_printer.asm  extra_byte_printer.cfg  level_ender.asm  level_ender.cfg  piranha_sideways.asm  piranha_sideways.cfg  roto_disc.asm  roto_disc.cfg  src.7z
src/: CMakeLists.txt  argparser.cpp  argparser.h  cfg.cpp  cfg.h  config.h  file_io.cpp  file_io.h  icon.rc  icon.res  iohandler.cpp  iohandler.h  json.cpp  json.h  json_const.h  lmdata.cpp  lmdata.h  main.cpp  map16.cpp  map16.cxpp  map16.h  paths.cpp  paths.h  pixi.manifest  pixi.rc  pixi_api.h  pixi_information_impl.cpp  sprite.cpp  structs.cpp  structs.h
src/CFG Editor/: .gitignore  CFG Editor.sln
src/CFG Editor/Build Json Cpp/: Build Json Cpp.csproj  Program.cs
src/CFG Editor/Build Json Cpp/Properties/: AssemblyInfo.cs
src/CFG Editor/CFG Editor/: Attribute and Extension.cs  CFG Editor Project.csproj  CFG Editor.Designer.cs  CFG Editor.cs  CFG Editor.resx  CFGFile.cs  Cfg File.cs  CollectionSprite.cs  Converter.cs  Extension.cs  NameExtraProp.Designer.cs  NameExtraProp.cs  Program.cs
src/CFG Editor/CFG Editor Tests/: AssertThrow.cs  CFG Editor Tests.csproj  Test Cfg File Version.cs  Test Cfg File.cs  Test CollectionSprite.cs  Test DisplaySprite.cs  Test Enum Extension.cs  Test Extension.cs  Test SnesGraphics.cs
src/CFG Editor/CFG Editor Tests/Json/: Test Byte Representation.cs
src/CFG Editor/CFG Editor Tests/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
src/CFG Editor/CFG Editor Tests/Resources/: CustomOldAsar.cfg  CustomOldXkas.cfg  Pixi_v1.1.cfg  Tweak.cfg  faux.sfc.sfc  faux.smc.smc
src/CFG Editor/CFG Editor/Editors/: FileSelector.Designer.cs  FileSelector.cs  Map16Editor.Designer.cs  Map16Editor.cs  Map16Editor.resx  PaletteEditorForm.Designer.cs  PaletteEditorForm.cs  SpriteEditor.Designer.cs  SpriteEditor.cs  Tile8x8EditorForm.Designer.cs  Tile8x8EditorForm.cs
src/CFG Editor/CFG Editor/Json/: JsonCfgFile.cs  JsonConst.cs  JsonHexConverter.cs  JsonTweaker.cs
src/CFG Editor/CFG Editor/Map16/: DisplaySprite.cs  GFXInfo.cs  Map16Data.cs  SnesGraphics.cs
src/CFG Editor/CFG Editor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
src/CFG Editor/CFG Editor/Properties/DataSources/: CFG.Map16.DisplaySprite.datasource  CFG.Map16.GFXInfo.datasource  CFG.Map16.Sprite.datasource  CollectionSprite.datasource
src/CFG Editor/CFG Editor/Resources/: SpriteList.txt  m16Page1_3.m16  sprite.pal
src/MeiMei/: MeiMei.cpp  MeiMei.h  Rom.cpp  Rom.h
src/api_bindings/: pixi_api.cs  pixi_api.h  pixi_api.py
src/asar/: asar.h  asardll.c  asardll.h
src/json/: base64.cpp  base64.h  sample.cpp  venus.json
src/libconsole/: libconsole.cpp  libconsole.h
src/libplugin/: libplugin.cpp  libplugin.h
src/patches/: 0001-Remove-unconditional-address-sanitizer-in-debug-mode.patch
src/pixi_gui/: CMakeLists.txt  PixiGui.cpp  PixiGui.h  PixiGui.ui  PixiGuiUI.cpp  PixiGuiUI.h
src/testbed/: json_parser.cpp  make.bat  wrong.json
sysLMRestore/: clean.lrp  sa-1 - Kopie.lrp  (+1 more)
unittests/: CMakeLists.txt  harness.cpp
unittests/testing_files/: base.smc  test.asm  test.cfg  test.json  test_sprite.json
unittests/testplugin/: testplugin.cpp
(+142 files in other folders)
