cmake_policy(SET CMP0091 NEW)
cmake_minimum_required(VERSION 3.18)
project(pixi VERSION 1.32 LANGUAGES CXX C)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(TOP_LEVEL_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
option(PIXI_CI_BUILD "Set to true if this is a CI build, not to publish." OFF)
option(PIXI_BUILD_TESTS "Set to true to build tests." ON)

add_subdirectory(src)
if (PIXI_BUILD_TESTS)
	message(STATUS "Building test suite")
	add_subdirectory(unittests)
endif()